@startuml

title __LAB ACTIVITY 5's Class Diagram__\n

  namespace  {
    class App {
    }
  }
  

  namespace  {
    class CalculatorLayout {
    }
  }
  

  namespace  {
    class MathHandler {
    }
  }
  

  namespace  {
    class MyButton {
    }
  }
  

  App -up-|> acm.program.GraphicsProgram
  App o-- CalculatorLayout : calculatorLayout
  CalculatorLayout -up-|> acm.graphics.GCompound
  MyButton -up-|> acm.graphics.GCompound


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
